--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>}</title>
+    <title></title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <h1><center>Bonzy Buddy Team</center></h1>
+    <br>
+        <ol><h3>Integrantes:</h3>
+            <li>Arturo Ehtan Duran Huerta</li>
+            <li>Jose Angel Renteria Rivera</li>
+            <li>Ary Rafael Sanchez Hernandez</li>
+            <li>Cristobal Eduardo Serrano Bahena</li>
+            <li>Hassiel Ulises Soria Lopez</li>
+            <li>Luis Fernando Soto Antunez</li>
+            <li>Pelon</li>
+        </ol>        
 </body>
 </html>
