--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
             <li>Hassiel Ulises Soria Lopez</li>
             <li>Luis Fernando Soto Antunez</li>
             <li>Pelon</li>
-        </ol>        
+        </ol>    
+        <table border="2px">
+            <tr>
+                <th>Matricula</th>
+                <th>Sexo</th>
+                <th>Edad</th>
+                <th>Enlace Pagina</th>
+            </tr>
+            <tr>
+                <td>20223TN122</td>
+                <td>A veces</td>
+                <td>18</td>
+                <td><a href="Integrantes/20223tn122.html">20223TN122.html</a></td>
+            </tr>
+            <tr>
+                <td>20223TN122</td>
+                <td>A veces</td>
+                <td>18</td>
+                <td><a href="Integrantes/20223tn122.html">20223TN122.html</a></td>
+            </tr>   
+        </table>    
 </body>
 </html>
