--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <td>18</td>
                 <td><a href="Integrantes/20223tn122.html">20223TN122.html</a></td>
             </tr>   
+            <tr>
+                <td>20223TN080</td>
+                <td>A veces</td>
+                <td>20</td>
+                <td><a href="Integrantes/20223tn080.html">20223TN122.html</a></td>
+            </tr> 
         </table>    
 </body>
 </html>
