--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
             <li>Hassiel Ulises Soria Lopez</li>
             <li>Luis Fernando Soto Antunez</li>
             <li>Pelon</li>
-        </ol>        
+        </ol>
+    <br>
+    <table>
+        <th>Matricula</th>
+        <th>Sexo</th>
+        <th>Edad</th>
+        <th>Enlace a Matricula</th>
+        <tr>
+            <td>
+                <p>20223tn106</p>
+            </td>
+            <td>
+                <p>Masculino</p>
+            </td>
+            <td>
+                <p>19</p>
+            </td>
+            <td>
+                <a href="Integrantes/20223tn106.html">20223tn106</a>
+            </td>
+        </tr>
+    </table>            
 </body>
 </html>
