--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <td><a href="Integrantes/20223tn122.html">20223TN122.html</a></td>
             </tr>
             <tr>
-                <td>20223TN122</td>
-                <td>A veces</td>
+                <td>20223TN111</td>
+                <td>No existe</td>
                 <td>18</td>
-                <td><a href="Integrantes/20223tn122.html">20223TN122.html</a></td>
+                <td><a href="Integrantes/20223tn111.html">20223TN111.html</a></td>
             </tr>   
             <tr>
                 <td>20223TN080</td>
