--- a/Integrantes/20223tn080.html
+++ b/Integrantes/20223tn080.html
@@ -16,5 +16,6 @@
     <p>Mi matricula es: <strong> 20223tn080</strong> </p>
     <p>Estudie la prepa en: <strong> Don bosco </strong> </p>
     <p>Me gusta: <strong>ver series y jugar en mis tiempos libres</strong> </p>
+    <a href="repositorios/BonziBuddy.github.io/index.html"> Regresar al main</a>
 </body>
 </html>
