--- a/Integrantes/20223tn122.html
+++ b/Integrantes/20223tn122.html
@@ -15,5 +15,6 @@
     </strong>, mi correo es <strong>20223tn122@utez.edu.mx</strong>, me gusta jugar <strong>Mortal Kombat 11</strong>
 soy tecnico en <STRONG>MECATRONICA</STRONG> y actualmente estudio la carrera de <strong>Infraestructura de redes digitales</strong>
     </p>
+    <a href="../index.html">REGRESAR AL INDEX</a>
 </body>
 </html>
