--- a/404.html
+++ b/404.html
@@ -11,35 +11,58 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit&family=Montserrat">
         <script src='main.js'></script>
         <style>
-            body {
+            *{
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
                 background-size: cover;
                 background-repeat: no-repeat;
-                font-family: 'Outfit';
-                text-align: center;
-                padding: 8px;
             }
-            .recuadro404 {
-                margin: auto auto;
+            body{
+                width: 100%;
+                height: 100vh;
+                display: flex;
                 justify-content: center;
                 align-items: center;
-                flex-direction: column;
-                padding: 0.5em;
-                margin-top: 250px;
-                width: 30%;
-                height: auto;
-                background: rgba(245, 245, 250, 0.5);
+                font-family: "Montserrat";
             }
-            p {
-                font-family: 'Montserrat';
-                font-size: 24px;
-                line-height: 8px;
+            .recuadro404{
+                text-align: center;
+                width: 100%;
+                max-width: 400px;
+                background: rgba(198, 168, 230, 0.5);
+                padding: 20px;
+                border-radius: 5px;
+                line-height: 1.3;
+                color: #1f1f29;
+            }
+            .btn_volver, .btn_index{
+                display: inline-block;
+                margin: 15px 5px;
+                text-decoration: none;
+                background: rgb(120, 73, 169);
+                color: #f5f5fa;
+                padding: 10px 15px;
+                border-radius: 5px;
+                font-family: "Outfit";
+            }
+            h1, h2{
+                font-family: "Outfit";
+                margin-bottom: 15px;
             }
         </style>
     </head>
     <body background="BonziBuddyAnimated.gif">
         <div class="recuadro404">
-            <h1><b>Error 404</b></h1>
-            <p>La página no ha sido encontrada</p>
+            <p style="font-size: 64px;"><strong>404</strong></p>
+            <h2>Página no encontrada</h2>
+            <p>La página que ha solicitado no existe,
+            no se encuentra disponible o
+            la ruta es inválida</p>
+            <div class="btn_volver" onclick="history.back()">
+                <p>Volver a la presentasión</p>
+            </div>
+            <a class="btn_index" href="index.html">Volver al index</a>
         </div>
     </body>
 </html>
