--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@
             no se encuentra disponible o
             la ruta es inválida</p>
             <div class="btn_volver" onclick="history.back()">
-                <p>Volver a la presentasión</p>
+                <p>Volver a la presentación</p>
             </div>
             <a class="btn_index" href="index.html">Volver al index</a>
         </div>
