--- a/404.html
+++ b/404.html
@@ -59,9 +59,7 @@
             <p>La página que ha solicitado no existe,
             no se encuentra disponible o
             la ruta es inválida</p>
-            <div class="btn_volver" onclick="history.back()">
-                <p>Volver a la presentación</p>
-            </div>
+            <a class="btn_volver" onclick="history.back()">Volver a la presentación</a>
             <a class="btn_index" href="index.html">Volver al index</a>
         </div>
     </body>
