Otro index nuevo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,24 +9,31 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body>
-    <h1><center>Bonzy Buddy Team</center></h1>
+
+<body background="images/fondo.jpg">
+    <h1>
+        <font face="Arial">
+            <center>Bonzy Buddy Team</center>
+        </font>
+    </h1>
     <br>
-        <ol><h3>Integrantes:</h3>
+    <font face="Cambria" size=5>
+        <ol>
+            <h3>Integrantes:</h3>
             <li>Arturo Ehtan Duran Huerta</li>
             <li>Jose Angel Renteria Rivera</li>
             <li>Ary Rafael Sanchez Hernandez</li>
             <li>Cristobal Eduardo Serrano Bahena</li>
             <li>Hassiel Ulises Soria Lopez</li>
             <li>Luis Fernando Soto Antunez</li>
-            <li>Pelon</li>        
-        </ol>    
+            <li>Pelon</li>
+        </ol>
         <table border="2px">
             <tr>
-                <th>Matricula</th>
-                <th>Sexo</th>
-                <th>Edad</th>
-                <th>Enlace Pagina</th>
+                <th width="200">Matricula</th>
+                <th width="200">Sexo</th>
+                <th width="200">Edad</th>
+                <th width="200">Enlace Pagina</th>
             </tr>
             <tr>
                 <td>20223TN122</td>
@@ -38,7 +46,7 @@
                 <td>No existe</td>
                 <td>18</td>
                 <td><a href="Integrantes/20223tn111.html">20223TN111.html</a></td>
-            </tr>   
+            </tr>
             <tr>
                 <td>20223TN080</td>
                 <td>A veces</td>
@@ -51,6 +59,9 @@
                 <td>19</td>
                 <td><a href="Integrantes/20223tn106.html">20223tn106.html</a></td>
             </tr>
-        </table>    
+        </table>
+    </font>
+    <a href="404.html"><img src="images/boton-clic-aqui.png" width="300"></a>
 </body>
+
 </html>
