--- a/Integrantes/20223TN111.html
+++ b/Integrantes/20223TN111.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,13 +9,19 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
+
 <body bgcolor="cyan">
-    <p>Cristobal Eduardo Serrano Bahena<br>
-     3ro E <br>
-     20223TN111<br>
-     Estudie es en el poderosisimo CECyTE de aqui a lado<br>
-     <strong>Pasatiempos: </strong> Mis pasatiempos son tocar guitarra, ver pelis y jugar videojuegos<br>   
-    
-    </p>
+    <font face="Verdana" size=5>
+        <p><strong>Nombre: </strong>Cristobal Eduardo Serrano Bahena<br>
+            3ro E <br>
+            20223TN111<br>
+            Estudie es en el poderosisimo CECyTE de aqui a lado<br>
+            <strong>Pasatiempos: </strong> Mis pasatiempos son tocar guitarra, ver pelis y jugar videojuegos<br>
+
+        </p>
+        <img src="../images/img1.jpg" width="700"><br>
+        <a href="../index.html"> Pa atras</a>
+    </font>
 </body>
+
 </html>
