--- a/index.html
+++ b/index.html
@@ -4,33 +4,40 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title></title>
+    <title>Index Equipo Bonzi Buddy</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit&family=Montserrat">
     <script src='main.js'></script>
+    <style>
+        body {
+            font-family: "Outfit";
+            font-size: 16px;;
+        }
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body background="images/fondo.jpg">
     <h1>
-        <font face="Arial">
-            <center>Bonzy Buddy Team</center>
-        </font>
+        <center>Bonzi Buddy Team</center>
     </h1>
     <br>
-    <font face="Cambria" size=5>
         <ol>
             <h3>Integrantes:</h3>
             <li>Arturo Ehtan Duran Huerta</li>
-            <li>Jose Angel Renteria Rivera</li>
-            <li>Ary Rafael Sanchez Hernandez</li>
+            <li>Jose Ángel Rentería Rivera</li>
+            <li>Ary Rafael Sánchez Hernández</li>
             <li>Cristobal Eduardo Serrano Bahena</li>
-            <li>Hassiel Ulises Soria Lopez</li>
-            <li>Luis Fernando Soto Antunez</li>
-            <li>Pelon</li>
+            <li>Hassiel Ulises Soria López</li>
+            <li>Luis Fernando Soto Antúnez</li>
+            <li>Jose Emiliano Zuñiga Hernandez <del>(Pelón, desertor, narco, jefe de plaza, millonario, playboy, filántropo, genio)</del></li>
         </ol>
         <table border="2px">
             <tr>
-                <th width="200">Matricula</th>
+                <th width="200">Matrícula</th>
                 <th width="200">Sexo</th>
                 <th width="200">Edad</th>
                 <th width="200">Enlace Pagina</th>
@@ -59,8 +66,13 @@
                 <td>19</td>
                 <td><a href="Integrantes/20223tn106.html">20223tn106.html</a></td>
             </tr>
+            <tr>
+                <td>20223TN143</td>
+                <td>Todos los días</td>
+                <td>21</td>
+                <td><a href="Integrantes/20223tn143.html">20223TN143.html</a></td>
+            </tr>
         </table>
-    </font>
     <a href="404.html"><img src="images/boton-clic-aqui.png" width="300"></a>
 </body>
 
