Luis Fernando Soto Antunez

--- a/Integrantes/20223tn143.html
+++ b/Integrantes/20223tn143.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <!--<link rel="icon" href="https://media.discordapp.net/attachments/831021515532271666/1103867115007660102/1683249195309.jpg?width=734&height=701">-->
-    <link rel="icon" href="crying cat.jpg">
+    <link rel="icon" href="../images/crying cat.jpg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit&family=Montserrat">
     <script src='main.js'></script>
     <style>
@@ -58,7 +58,7 @@
     </style>
 </head>
 <!--<body>background="https://media.discordapp.net/attachments/684412071898906638/1103867637513080884/crying_cat_animated.gif?width=634&height=423" text="#1f1f29">-->
-<body background="crying cat animated.gif" text="#1f1f29">
+<body background="../images/crying cat animated.gif" text="#1f1f29">
     <div class="header" id="presentacion">
             <!--<marquee direction="right" behavior="alternate" scrollamount=20><h1>Presentación &#128128;</h1></marquee>-->
             <h1>Presentación &#128128;</h1>
@@ -95,9 +95,9 @@
             <p style="text-decoration: line-through;">Coger</p>
             </div>
         </div>
-        <img src="Aaaaaa mi mente weeeeee.jpg" alt="La imagen de un gato con la cara estirada diciendo: Aaaaaah, mi mente weeeeee!" width="200px" style="margin: 25px;"><br>
-        <a class="btn_index" href="BonziBuddy.github.io/index.html">Index</a>
-        <a class="btn_404" href="emi_millonario.html">Como invertir en fondos indexados</a>
+        <img src="../images/Aaaaaa mi mente weeeeee.jpg" alt="La imagen de un gato con la cara estirada diciendo: Aaaaaah, mi mente weeeeee!" width="200px" style="margin: 25px;"><br>
+        <a class="btn_index" href="../index.html">Index</a>
+        <a class="btn_404" href="../emi_millonario.html">Como invertir en fondos indexados</a>
     </div>
 </body>
 </html>
