--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <title>Luis Soto</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-        <link rel="icon" href="BonziBuddyFacha.jpg">
+        <link rel="icon" href="../images/BonziBuddyFacha.jpg">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit&family=Montserrat">
         <script src='main.js'></script>
         <style>
@@ -52,7 +52,7 @@
             }
         </style>
     </head>
-    <body background="BonziBuddyAnimated.gif">
+    <body background="../images/BonziBuddyAnimated.gif">
         <div class="recuadro404">
             <p style="font-size: 64px;"><strong>404</strong></p>
             <h2>Página no encontrada</h2>
