Luis Fernando Soto Antunez

--- a/Integrantes/20223tn143.html
+++ b/Integrantes/20223tn143.html
@@ -97,7 +97,7 @@
         </div>
         <img src="../images/Aaaaaa mi mente weeeeee.jpg" alt="La imagen de un gato con la cara estirada diciendo: Aaaaaah, mi mente weeeeee!" width="200px" style="margin: 25px;"><br>
         <a class="btn_index" href="../index.html">Index</a>
-        <a class="btn_404" href="../emi_millonario.html">Como invertir en fondos indexados</a>
+        <a class="btn_404" href="../404.html">Como invertir en fondos indexados</a>
     </div>
 </body>
 </html>
