--- a/Integrantes/20223tn117.html
+++ b/Integrantes/20223tn117.html
@@ -15,6 +15,7 @@
     <p><strong>Matricula: </strong><br> 20223tn117</p>
     <p><strong>Estudios: </strong> <br> CECM</p>
     <p><strong>Pasatiempo: </strong> <br> Jugar videojuegos y ver anime</p>
+    <a href="Repositorios/BonziBuddy.github.io/index.html"><p>Regresar al main</p></a> 
     <img src="imagen1.jpg" alt="Imagen">
 </body>
 </html>
