--- a/Integrantes/20223tn117.html
+++ b/Integrantes/20223tn117.html
@@ -16,6 +16,6 @@
     <p><strong>Estudios: </strong> <br> CECM</p>
     <p><strong>Pasatiempo: </strong> <br> Jugar videojuegos y ver anime</p>
     <a href="Repositorios/BonziBuddy.github.io/index.html"><p>Regresar al main</p></a> 
-    <img src="imagen1.jpg" alt="Imagen">
+    <img src="desktop/Repositorios/Imagen/imagen1" alt="Imagen">
 </body>
 </html>
