Ary Rafael Sanchez Hernandez

--- a/Integrantes/primer pagina html.html
+++ b/Integrantes/primer pagina html.html
@@ -19,8 +19,8 @@
     <p>20223TN078</p>
     <p>Egresé de la preparatoria CETEC</p>
     <p>como pasatiempos me gustan mucho los videojugos, los deportes, dormir, a veces cuando tengo ganas me pongo a estudiar
+        <a href="repositorio/BonziBuddy.github.io/index.html"><p>regresar al main</p></a>
     </p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.hostinger.es%2Ftutoriales%2Fque-es-html&psig=AOvVaw3bX9i0PbANseCPSFTtwIZE&ust=1683309994228000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCJjx_cSg3P4CFQAAAAAdAAAAABAD" alt="imagen">
-
+    
 </body>
 </html>
