Ya le puse el botón de regreso

--- a/Integrantes/20223tn106.html
+++ b/Integrantes/20223tn106.html
@@ -9,6 +9,8 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <a href="Integrantes/index.html">Regresar al inicio</a>
+    <br>
     <p>Nombre <strong>Jose Angel Renteria Rivera</strong> </p>
     <p>Estudio la carrera de: <strong>Redes Digitales</strong></p>
     <p>Correo: <strong>20223tn106@utez.edu.mx</strong></p>
@@ -18,5 +20,6 @@
 
     <br>
     <img src="C:\Users\CA2\Pictures\amungus.png" alt="Hola soy un sus">
+    
 </body>
 </html>
