--- a/Integrantes/20223tn106.html
+++ b/Integrantes/20223tn106.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <a href="BonziBuddy.github.io/index.html">Regresar al inicio</a>
+    <a href="../index.html">Regresar al inicio</a>
     <br>
     <p>Nombre <strong>Jose Angel Renteria Rivera</strong> </p>
     <p>Estudio la carrera de: <strong>Redes Digitales</strong></p>
@@ -19,7 +19,7 @@
     <P>Pasatiempos: <strong>Jugar videojuegos, ver películas en cuevana y </strong></P>
 
     <br>
-    <img src="images\amungus.png" alt="Hola soy un sus">
+    <img src="../images\amungus.png" alt="Hola soy un sus">
     
 </body>
 </html>
