--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
                 <td>21</td>
                 <td><a href="Integrantes/20223tn143.html">20223TN143.html</a></td>
             </tr>
+            <tr>
+                <td>20223TN143</td>
+                <td>Todos los días</td>
+                <td>21</td>
+                <td><a href="Integrantes/20223tn143.html">20223TN143.html</a></td>
+            </tr>
+            <tr>
+                <td>20223TN078</td>
+                <td>Todos los días</td>
+                <td>20</td>
+                <td><a href="Integrantes/primer pagina html.html">primer pagina html.html</a></td>
+            </tr>
         </table>
     <a href="404.html"><img src="images/boton-clic-aqui.png" width="300"></a>
 </body>
