--- a/Integrantes/20223tn080.html
+++ b/Integrantes/20223tn080.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body text = "white" background="https://media.tenor.com/waykWoXgeF0AAAAd/halo-elite-halo.gif">
+<body text = "white" background="../images/halo-elite-halo.gif">
     <H1> TRABAJO 2</H1>
     <p>Hola mi nombre es: <strong> Hassiel Ulises Soria Lopez</strong> </p>
     <p> Estudio: <strong> Redes digitales </strong> y estoy en el grupo: <strong> 3ro E </strong> </p>
