fusion de index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </tr>
             <tr>
                 <td>20223TN122</td>
-                <td>A veces</td>
+                <td>Masculino</td>
                 <td>18</td>
                 <td><a href="Integrantes/20223tn122.html">20223TN122.html</a></td>
             </tr>
