Ary Rafael Sanchez Hernandez

--- a/Integrantes/primer pagina html.html
+++ b/Integrantes/primer pagina html.html
@@ -19,7 +19,7 @@
     <p>20223TN078</p>
     <p>Egresé de la preparatoria CETEC</p>
     <p>como pasatiempos me gustan mucho los videojugos, los deportes, dormir, a veces cuando tengo ganas me pongo a estudiar
-        <a href="repositorio/BonziBuddy.github.io/index.html"><p>regresar al main</p></a>
+        <a href="../index.html"><p>regresar al main</p></a>
     </p>
     
 </body>
