--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Cristobal Eduardo Serrano Bahena</li>
             <li>Hassiel Ulises Soria López</li>
             <li>Luis Fernando Soto Antúnez</li>
-            <li>Jose Emiliano Zuñiga Hernandez <del>(Pelón, desertor, narco, jefe de plaza, millonario, playboy, filántropo, genio)</del></li>
+            <li>Jose Emiliano Zuñiga Hernandez</li>
         </ol>
         <table border="2px">
             <tr>
@@ -76,7 +76,7 @@
                 <td>20223TN078</td>
                 <td>Todos los días</td>
                 <td>20</td>
-                <td><a href="Integrantes/primer pagina html.html">primer pagina html.html</a></td>
+                <td><a href="Integrantes/primer pagina html.html">20223TN078.html</a></td>
             </tr>
             <tr>
                 <td>20223tn117</td>
