--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <td>20223TN111</td>
                 <td>No existe</td>
                 <td>18</td>
-                <td><a href="Integrantes/20223tn111.html">20223TN111.html</a></td>
+                <td><a href="Integrantes/20223TN111.html">20223TN111.html</a></td>
             </tr>
             <tr>
                 <td>20223TN080</td>
