--- a/Pelicula Inception.html
+++ b/Pelicula Inception.html
@@ -3,9 +3,10 @@
     <head>
         <title>Inception</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <link rel="icon" href="">
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+        <link rel="icon" href="images/BonziBuddyFacha.jpg">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit&family=Montserrat">
         <style>
             *{
@@ -19,6 +20,6 @@
     </head>
     <body background="https://www.themoviedb.org/t/p/original/rWDkbJlIyqN8KcqXajh9sZMwGzo.jpg">
         <!--Inception: Nombre, año de publicación, productor/editorial, imágenes, reseña, calificación-->
-
+        <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
     </body>
 </html>
