Atributo alt agregado a las imagenes

--- a/Pelicula Inception.html
+++ b/Pelicula Inception.html
@@ -68,7 +68,7 @@
         <!--Inception: Nombre, año de publicación, productor/editorial, imágenes, reseña, calificación-->
         <div class="info-container">
             <strong><p style="font-family: Outfit; font-size: 48px;">Inception</p></strong><br>
-            <img src="https://www.nolanfans.com/images/posters/inception/p4xfull.jpg" height="200px">
+            <img src="https://www.nolanfans.com/images/posters/inception/p4xfull.jpg" height="200px" alt="Poster de la película Inception">
             <div class="brief-info">
                 <p>En español: Origen &#x2022; 2010</p>
                 <p>Producido por: Cristopher Nolan, Emma Thomas</p>
@@ -90,8 +90,8 @@
                 <h2 style="text-align: left;">Imágenes</h2>
                 <hr>
                 <br>
-                <img src="https://street-warrior.ru/800/600/https/fb.ru/misc/i/gallery/51870/1821423.jpg" width="300px" height="200px">
-                <img src="http://2.bp.blogspot.com/_bl5ZnczG4Bs/TEpPtmMXVjI/AAAAAAAAClU/MdL5CGtf0pA/s400/preview-inception-431.jpg" width="300px" height="200px">
+                <img src="https://street-warrior.ru/800/600/https/fb.ru/misc/i/gallery/51870/1821423.jpg" width="300px" height="200px" alt="Personajes de la película sobre el techo de un edificio viendo cómo se deforma la realidad">
+                <img src="http://2.bp.blogspot.com/_bl5ZnczG4Bs/TEpPtmMXVjI/AAAAAAAAClU/MdL5CGtf0pA/s400/preview-inception-431.jpg" width="300px" height="200px" alt="La famosa escena de Arthur peleando contra enemigos en los pasillos de un hotel, pasillos los cuales están rotando">
             </div>
             <div class="trailer">
                 <h2 style="text-align: left;">Trailer</h2>
