--- a/Minecraft/Pagina Videojuego.html
+++ b/Minecraft/Pagina Videojuego.html
@@ -29,6 +29,6 @@
 
         <h1>Comprar
         <p>Puedes comprar minecraft en el siguiente link:</p>
-        <a href=”https://www.youtube.com/”>Comprar minecraft</a>
+        <a href="www.minecraft.net">Comprar minecraft</a>
 </body>
 </html>
