--- a/Apex legends/Apex Legends.html
+++ b/Apex legends/Apex Legends.html
@@ -14,7 +14,27 @@
         }
     </style>
 </head>
-<body background="images/Apex legends.jpg"> 
-    
+<body text="white" background="https://www.xtrafondos.com/descargar.php?id=3404&resolucion=3840x2160"> 
+    <H1> Apex legends</H1>
+    <p><strong>Año de publicacion del juego</strong></p>
+    <p> Apex legends se lanzo a todas las consolas el 4 de febrero del 2019 y para switch el 9 de marzo del 2019</p>
+    <br>
+    <p> <strong>Desarrollador y distribuidor</strong></p>
+    <p> El juego fue desarrolado por Respawn Entertainment y distribuido por Electronics Arts</p>
+    <br>
+    <img src="images/Bangalore.jpg" width="500px"> <img src="images/Batalla.jpg" width="500px">
+    <br>
+    <p><strong> Reseña</strong></p>
+    <p>El éxito de Apex Legends se debe a varios factores, uno de ellos es que el juego tiene como base el parte del desarrollo para Titanfall 2
+    , un título de Respawn al que le fue muy bien en reseñas y que de hecho, gracias a la apabullante popularidad de Apex 
+    ha visto regresar a muchos combatientes.
+    Además de una base sólida, incorporaron las mejores ideas de los otros Battle Royale (como Fortnite o PUBG)
+    al mismo tiempo que hicieron la experiencia lo más simple posible, además que lograron ofrecer algo que otros juegos
+    del género no han podido: hacerte sentir que estás en un genuino campo de batalla.</p>
+    <br>
+    <p><strong> Calificacion y rango de edad</strong></p>
+    <p> La calificacion que se le ha dado al juego es de 3.5 de 5 estrellas en distintas paginas
+        y los usu deben de tener 12 años para poder jugarlo
+    </p>
 </body>
 </html>>
